# CNN_GRU_SeqCap

./: .gitignore  README.md  check_data_structure.py  config.py  create_test_data.py  pkl_viewer.py  pyproject.toml  test.py  train.py
.trae/rules/: project_rules.md
configs/: feature_config.yaml
model/: CNN_GRU_SeqCap.py  CNN_LSTM.py
utils/features_extraction/: database.py  database_copy.py  extract_features.py  features_util.py
